CRUD done for pets

--- a/PetGrooming/Views/Pet/Show.cshtml
+++ b/PetGrooming/Views/Pet/Show.cshtml
@@ -5,7 +5,13 @@
 }
 
 <h2>Show Pet</h2>
+<a href="/Pet/List">Go Back</a>
+<a href="/Pet/Update/@Model.PetID">Update</a>
+<a href="">Delete</a>
+
 
 <div>Name : @Model.PetName</div>
 <div>Weight : @Model.Weight</div>
 <div>Species : @Model.Species.Name</div>
+<div>Notes : @Model.Notes</div>
+
