--- a/PetGrooming/Views/Species/Add.cshtml
+++ b/PetGrooming/Views/Species/Add.cshtml
@@ -4,4 +4,9 @@
 }
 
 <h2>Add</h2>
+<form method="POST" action="/Species/Add">
+    <div><span>Species Name:</span>
+    <input id="SpeciesName" type="text" name="SpeciesName" /></div>
+    <input type="submit" value="Add Species">
+</form>
 
