--- a/PetGrooming/Views/Species/List.cshtml
+++ b/PetGrooming/Views/Species/List.cshtml
@@ -9,8 +9,8 @@
 @{ 
     foreach (var species in @Model) {
 
-        <div>
-            @species.Name
-        </div>
+    <div>
+        <span><a href="/Species/Show/@species.SpeciesID">@species.Name</a></span>
+    </div>
     }
 }
