--- a/PetGrooming/Views/Species/Show.cshtml
+++ b/PetGrooming/Views/Species/Show.cshtml
@@ -1,7 +1,11 @@
-﻿
+﻿@model PetGrooming.Models.Species
 @{
     ViewBag.Title = "Show";
 }
 
-<h2>Show</h2>
+<h2>Show Species</h2>
+
+<div>Name : @Model.Name</div>
+<a href="/Species/List">Back to List</a>
+<a href="/Species/Update/@Model.SpeciesID">Back to List</a>
 
