--- a/PetGrooming/Views/Pet/List.cshtml
+++ b/PetGrooming/Views/Pet/List.cshtml
@@ -5,15 +5,17 @@
 }
 
 <h2>List of Pets</h2>
+<span><a href="/Pet/New">Add New</a></span>
 
 @{ 
     foreach(var Pet in Model)
     {
-        <div>
-            <span><a href="/Pet/Show/@Pet.PetID">@Pet.PetName</a></span>
-            <span>@Pet.Species.Name</span>
-            <span>@Pet.Weight</span>
-            <span><a href="/Pet/Update/@Pet.PetID">Update</a></span>
-        </div>
+    <div>
+        <span><a href="/Pet/Show/@Pet.PetID">@Pet.PetName</a></span>
+        <span>@Pet.Species.Name</span>
+        <span>@Pet.Weight</span>
+        <span><a href="/Pet/Update/@Pet.PetID">Update</a></span>
+        <span><a href="/Pet/Delete/@Pet.PetID">Delete</a></span>
+    </div>
     }
 }
