CRUD finished for Species

--- a/PetGrooming/Views/Pet/New.cshtml
+++ b/PetGrooming/Views/Pet/New.cshtml
@@ -4,7 +4,7 @@
 }
 
 <h2>Add a New Pet</h2>
-<a href="/Pet/List">Go back</a>
+<a href="/Pet/List">Back to List</a>
 
 <form method="POST" action="/Pet/Add">
     <!-- TODO: format this nicely -->
