--- a/PetGrooming/Views/Species/Add.cshtml
+++ b/PetGrooming/Views/Species/Add.cshtml
@@ -3,7 +3,9 @@
     ViewBag.Title = "Add";
 }
 
-<h2>Add</h2>
+<h2>Add a Species</h2>
+<a href="/Species/List/">Back to List</a>
+
 <form method="POST" action="/Species/Add">
     <div><span>Species Name:</span>
     <input id="SpeciesName" type="text" name="SpeciesName" /></div>
