--- a/PetGrooming/Views/Species/List.cshtml
+++ b/PetGrooming/Views/Species/List.cshtml
@@ -6,11 +6,14 @@
 }
 
 <h2>List</h2>
+<a href="/Species/Add/">Add a Species</a>
 @{ 
     foreach (var species in @Model) {
 
     <div>
         <span><a href="/Species/Show/@species.SpeciesID">@species.Name</a></span>
+        <span><a href="/Species/Update/@species.SpeciesID">Update</a></span>
+        <span><a href="/Species/Delete/@species.SpeciesID">Delete</a></span>
     </div>
     }
 }
