--- a/PetGrooming/Views/Species/Show.cshtml
+++ b/PetGrooming/Views/Species/Show.cshtml
@@ -4,8 +4,12 @@
 }
 
 <h2>Show Species</h2>
+<a href="/Species/List/">Back to List</a>
 
 <div>Name : @Model.Name</div>
-<a href="/Species/List">Back to List</a>
-<a href="/Species/Update/@Model.SpeciesID">Back to List</a>
+<div> List of Animals that are this particular species</div>
+
+<a href="/Species/Update/@Model.SpeciesID">Update</a>
+<a href="/Species/Delete/@Model.SpeciesID">Delete</a>
+
 
