--- a/PetGrooming/Views/Species/Add.cshtml
+++ b/PetGrooming/Views/Species/Add.cshtml
@@ -4,11 +4,13 @@
 }
 
 <h2>Add a Species</h2>
-<a href="/Species/List/">Back to List</a>
+<a href="/Species/List/" class="back-button">Back to List</a>
 
 <form method="POST" action="/Species/Add">
-    <div><span>Species Name:</span>
-    <input id="SpeciesName" type="text" name="SpeciesName" /></div>
+    <div>
+        <span>Species Name:</span>
+        <input id="SpeciesName" type="text" name="SpeciesName" />
+    </div>
     <input type="submit" value="Add Species">
 </form>
 
