--- a/PetGrooming/Views/Species/Update.cshtml
+++ b/PetGrooming/Views/Species/Update.cshtml
@@ -4,7 +4,7 @@
 }
 
 <h2>Update @Model.Name</h2>
-<a href="/Species/List/">Back to List</a>
+<a href="/Species/List/" class="back-button">Back to List</a>
 <form method="POST" action="/Species/Update/@Model.SpeciesID">
     <input type="text" name="SpeciesName" id="SpeciesName" value="@Model.Name" />
     <input type="submit" value="Update Species"/>
