--- a/PetGrooming/Views/Pet/List.cshtml
+++ b/PetGrooming/Views/Pet/List.cshtml
@@ -18,7 +18,7 @@
             <span>@Pet.Species.Name</span>
         </div>
         <div>
-            <span>@Pet.Weight</span>
+            <span>@Pet.Weight Kg</span>
         </div>
 
         <span><a href="/Pet/Update/@Pet.PetID">Update</a></span>
